src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Withdraw</fullName>
        <description>Withdraw Request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>amount__c</fullName>
        <description>Deposit/Withdrawal Amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>reject_reason__c</fullName>
        <description>Withdrawal / Deposit reject reason</description>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>request_id__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup value from Account client page</description>
        <label>Stox Username</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.username__c</field>
                <operation>equals</operation>
                <valueField>Account.username__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <group>Support</group>
            <group>Support_Team</group>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Dealing</role>
            <role>VP_Finance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases_MTD</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases MTD</label>
        <sharedTo>
            <role>BO_Operations_Manager</role>
            <role>Compliance_Operations_Manager</role>
            <role>Head_of_IT</role>
            <role>Head_of_Legal</role>
            <role>MD</role>
            <role>Marketing_Operations_Manager</role>
            <role>Sales_Operations_Manager</role>
            <role>Support_Operations_Manager</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Dealing</role>
            <role>VP_Finance</role>
            <role>VP_Marketing</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pending_Cases_MTD</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>username__c</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>contains</operation>
            <value>Escalated,Waiting for Client,Waiting for 3rd party,In Process (Finance),On H</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,New</value>
        </filters>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All Pending Cases MTD</label>
        <sharedTo>
            <role>BO_Operations_Manager</role>
            <role>Compliance_Operations_Manager</role>
            <role>Head_of_IT</role>
            <role>Head_of_Legal</role>
            <role>MD</role>
            <role>Marketing_Operations_Manager</role>
            <role>Sales_Operations_Manager</role>
            <role>Support_Operations_Manager</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arabic_Leads_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Arabic Leads</label>
        <queue>Arabic_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>BO</label>
    </listViews>
    <listViews>
        <fullName>BO_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>username__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>BO Cases Queue</label>
        <queue>BO_Cases_Queue</queue>
        <sharedTo>
            <group>BO</group>
            <role>BO_Operations_Manager</role>
            <role>BO_User</role>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Cases_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Closed Cases</label>
        <queue>Closed_Cases</queue>
        <sharedTo>
            <group>BO</group>
            <group>Compliance</group>
            <group>Dealing</group>
            <group>Deposit_WD</group>
            <group>Sales</group>
            <group>Sales_Team</group>
            <group>Support</group>
            <group>Support_Team</group>
            <role>BO_Operations_Manager</role>
            <role>Compliance_Operations_Manager</role>
            <role>Head_of_IT</role>
            <role>Head_of_Legal</role>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Support_Operations_Manager</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Dealing</role>
            <role>VP_Finance</role>
            <role>VP_Marketing</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>username__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Compliance Cases Queue</label>
        <queue>Compliance_Cases_Queue</queue>
        <sharedTo>
            <group>Compliance</group>
            <role>Compliance_Operations_Manager</role>
            <role>Compliance_User</role>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dealing_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Dealing Cases Queue</label>
        <queue>Dealing_Cases_Queue</queue>
        <sharedTo>
            <group>Dealing</group>
            <role>MD</role>
            <role>VP_Dealing</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deposit_WD_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Deposit/WD Cases Queue</label>
        <queue>Deposit_WD_Cases_Queue</queue>
        <sharedTo>
            <group>Deposit_WD</group>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>reject_reason__c</columns>
        <filterScope>Queue</filterScope>
        <label>Finance Cases Queue</label>
        <queue>Finance_Cases_Queue</queue>
        <sharedTo>
            <group>Finance</group>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Finance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>IT Cases Queue</label>
        <queue>IT_Cases_Queue</queue>
        <sharedTo>
            <group>IT</group>
            <role>Head_of_IT</role>
            <role>MD</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Cases_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Legal Cases Queue</label>
        <queue>Legal_Cases_Queue</queue>
        <sharedTo>
            <group>Legal</group>
            <role>Compliance_Operations_Manager</role>
            <role>Head_of_Legal</role>
            <role>MD</role>
            <role>VP_BO_Compliance</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>username__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>Support_Operations_Manager</role>
            <role>Support_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Withdraw</fullName>
        <active>true</active>
        <businessProcess>Withdraw</businessProcess>
        <description>Withdraw</description>
        <label>Withdraw</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>cases_Assign_to_Q_or_User</fullName>
        <active>false</active>
        <description>Only allow user to choose Assign To User OR Assign To Queue</description>
        <errorConditionFormula>CASE(IF(ISBLANK(TEXT(reassign_to_queue__c)), 0, 1) +IF(ISBLANK(TEXT(Reassign_to_User__c)), 0, 1), 1, 1,0)=0</errorConditionFormula>
        <errorMessage>You may only Assign to a Queue OR Assign to a User, not both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>closed_Cases</fullName>
        <active>true</active>
        <description>moves closed cases from Department Queues</description>
        <errorConditionFormula>AND(
         NOT(ISBLANK(Owner:Queue.Id)),
         ISPICKVAL(Status, &quot;Closed&quot;)
)</errorConditionFormula>
        <errorMessage>failed, use assignment rule checkbox at the bottom of the page</errorMessage>
    </validationRules>
</CustomObject>